--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;700;900&display=swap" rel="stylesheet">
 
+  <!-- My script -->
+  <script src="./script/script.js" defer></script>
+
   <!-- My CSS -->
   <link rel="stylesheet" href="./style/style.css">
 
@@ -36,7 +39,7 @@
 
 
 
-      <form class="landing__form" action="mailto:test@test.com" method="post">
+      <form class="landing__form" id="my-form">
 
         <div>
           <label for="fname">שם מלא</label><br>
